--- a/thinkforyouth/.env.example
+++ b/thinkforyouth/.env.example
@@ -1,3 +1,4 @@
+# Rename this file to .env
 # Environment variables go here. Override the missing fields
 
 # SECURITY WARNING: keep the secret key used in production secret!
